--- a/assets/cv.tex
+++ b/assets/cv.tex
@@ -25,9 +25,6 @@
 
 \makecvtitle
 
-% Default space below the title is pretty large
-\vspace{-2em}
-
 % =============================================================================
 
 \section{Education}
@@ -57,7 +54,7 @@
 
 \cvitem{Languages}{\textbf{C++}, \textbf{Java}, \textbf{Python}, \textbf{Rust}, C, C\#, JavaScript, Perl}
 
-\cvitem{Machine Learning}{\textbf{TensorFlow}, PyTorch}
+\cvitem{Machine Learning}{\textbf{TensorFlow}, PyTorch, scikit-learn}
 
 \cvitem{Scientific}{\textbf{NumPy}, MATLAB}
 
@@ -89,7 +86,7 @@
 \cventry{2017}{Process Software Intern}{IM Flash Technologies}{Lehi UT}{}{
     \begin{itemize}
         \item Improved the efficiency of wafer defect sourcing using an automated Perl pipeline.
-        \item Reduced errors in process time estimation by 97 percent through online statistical analysis of historical data.
+        \item Reduced errors in process time estimation by 97 percent via online statistical analysis of historical data.
     \end{itemize}
 }
 
@@ -106,7 +103,7 @@
 \cventry{2020--Present}{Research Assistant}{UW-Madison}{}{Advised by Mohit Gupta}{
     \begin{itemize}
         \item Creating image and video processing algorithms for single-photon visual sensors.
-        \item Exploring the theory and applications of spiking neural networks.
+        \item Exploring theory and applications of spiking neural networks.
     \end{itemize}
 }
 
@@ -120,7 +117,7 @@
 \cventry{2016--2018}{Research Assistant}{University of Utah}{}{Advised by Douglas Bergman}{
     \begin{itemize}
         \item Wrote C++ simulations of cosmic ray propagation and detection in order to test new detection techniques.
-        \item Operated the Telescope Array observatory in Delta, Utah.
+        \item Operated the Telescope Array observatory in Delta UT.
     \end{itemize}
 }
 
@@ -128,29 +125,46 @@
 
 \section{Teaching Experience}
 
-\cventry{Fall 2019}{Teaching Assistant}{UW-Madison}{}{Computer Graphics}{}
+\cventry{Fall 2019}{Teaching Assistant}{UW-Madison}{}{CS 559 Computer Graphics}{
+    Instructor: Florian Heimerl
+}
 
-\cventry{Fall 2017}{Teaching Assistant}{University of Utah}{}{Discrete Mathematics}{}
+\cventry{Fall 2017}{Teaching Assistant}{University of Utah}{}{CS 2100 Discrete Structures}{
+    Instructor: Bei Wang
+}
 
-\cventry{Spring 2017}{Teaching Assistant}{University of Utah}{}{General Physics II}{}
+\cventry{Spring 2017}{Teaching Assistant}{University of Utah}{}{PHYS 2020 General Physics II}{
+    Instructor: Ren Pankovich
+}
 
-\cventry{Fall 2016}{Teaching Assistant}{University of Utah}{}{General Physics I}{}
+\cventry{Fall 2016}{Teaching Assistant}{University of Utah}{}{PHYS 2010 General Physics I}{
+    Instructor: Orest Symko
+}
 
-\cventry{2015--2016}{Private Tutor}{University of Utah}{}{}{}
+\cventry{2015--2016}{Private Physics Tutor}{University of Utah}{}{}{
+    Courses: General Physics I and II, Physics for Scientists and Engineers I and II, Introduction to Quantum Theory and Relativity
+}
 
 % =============================================================================
 
 \section{Volunteer Experience}
 
-\cventry{2019--Present}{Events Committee Chair}{Student ACM Chapter}{Madison WI}{}{}
+\cventry{2019--Present}{Events Committee Chair}{Student ACM Chapter}{Madison WI}{}{
+    \begin{itemize}
+        \item Responsible for overseeing department-wide, student-organized events.
+        \item Coordinated with the CS department in planning and hosting the 2020 prospective graduate student welcome weekend event.
+    \end{itemize}
+}
 
 \cventry{2019}{Events Committee Officer}{Student ACM Chapter}{Madison WI}{}{}
 
-\cventry{2018}{CS Club Leader}{Lowell Elementary School}{Madison WI}{}{}
+\cventry{2018}{CS Club Leader}{Lowell Elementary School}{Madison WI}{}{
+    \begin{itemize}
+        \item Coached 4\textsuperscript{th} and 5\textsuperscript{th} graders in Scratch programming and computational thinking.
+    \end{itemize}
+}
 
 \cventry{2016, 2017}{Project Judge}{Salt Lake Valley Science and Engineering Fair}{Salt Lake City UT}{}{}
-
-\cventry{2015, 2016}{Science Day Volunteer}{University of Utah College of Science}{Salt Lake City UT}{}{}
 
 % =============================================================================
 
