Update CV color

--- a/assets/cv.tex
+++ b/assets/cv.tex
@@ -3,7 +3,7 @@
 \usepackage[margin=2cm]{geometry}
 
 \moderncvstyle{classic} % casual (default), classic, banking, oldstyle, fancy
-\moderncvcolor{grey}    % black, blue (default), burgandy, green, grey, orange, purple, red
+\moderncvcolor{blue}    % black, blue (default), burgandy, green, grey, orange, purple, red
 \moderncvicons{awesome} % awesome, marvosym
 
 % Sets non-italic font for contact info
