Fix trailing dash in CV metadata title

--- a/assets/cv.tex
+++ b/assets/cv.tex
@@ -12,6 +12,9 @@
 % Fixes weird off-center bullets
 \renewcommand{\labelitemi}{\color{color1}\raisebox{0.5pt}{$\circ$}}
 
+% Fixes trailing dash in PDF metadata title
+\pdfinfo{/Title (Matt Dutson)}
+
 % =============================================================================
 
 \name{Matt}{Dutson}
