Add title to CV

--- a/assets/cv.tex
+++ b/assets/cv.tex
@@ -6,18 +6,17 @@
 \moderncvcolor{blue}    % black, blue (default), burgandy, green, grey, orange, purple, red
 \moderncvicons{awesome} % awesome, marvosym
 
-% Sets non-italic font for contact info
+% Sets non-italic font for title and contact info
 \renewcommand{\addressfont}{\normalsize\mdseries\upshape}
+\renewcommand{\titlefont}{\LARGE\mdseries\upshape}
 
 % Fixes weird off-center bullets
 \renewcommand{\labelitemi}{\color{color1}\raisebox{0.5pt}{$\circ$}}
 
-% Fixes trailing dash in PDF metadata title
-\pdfinfo{/Title (Matt Dutson)}
-
 % =============================================================================
 
 \name{Matt}{Dutson}
+\title{CS Graduate Student at UW-Madison}
 \phone{(608) 440-4434}
 \email{dutson@wisc.edu}
 \homepage{mattdutson.net}
