--- a/assets/cv.tex
+++ b/assets/cv.tex
@@ -160,11 +160,7 @@
 
 \cventry{2019}{Events Committee Officer}{Student ACM Chapter}{Madison WI}{}{}
 
-\cventry{2018}{CS Club Leader}{Lowell Elementary School}{Madison WI}{}{
-    \begin{itemize}
-        \item Coached 4\textsuperscript{th} and 5\textsuperscript{th} graders in Scratch programming and computational thinking.
-    \end{itemize}
-}
+\cventry{2018}{Scratch Club Leader}{Lowell Elementary School}{Madison WI}{}{}
 
 \cventry{2016, 2017}{Project Judge}{Salt Lake Valley Science and Engineering Fair}{Salt Lake City UT}{}{}
 
