Minor updates to CV and homepage

--- a/assets/cv.tex
+++ b/assets/cv.tex
@@ -20,6 +20,7 @@
 \phone{(608) 440-4434}
 \email{dutson@wisc.edu}
 \homepage{mattdutson.net}
+\social[github]{mattdutson}
 
 % =============================================================================
 
@@ -68,7 +69,7 @@
 
 \section{Selected Coursework}
 
-\cvitem{Computer Science}{Computer vision, computer graphics, machine learning, high performance computing, nonlinear optimization, algorithms, machine organization}
+\cvitem{Computer Science}{Computer vision, computer graphics, machine learning, high performance computing, computer architecture, data visualization, nonlinear optimization, algorithms}
 
 \cvitem{Mathematics}{Real analysis, statistics, partial differential equations, ordinary differential equations, linear algebra, calculus}
 
