--- a/assets/cv.tex
+++ b/assets/cv.tex
@@ -1,6 +1,6 @@
-\documentclass[sans]{moderncv}
+\documentclass[sans,letterpaper]{moderncv}
 
-\usepackage[margin=2cm]{geometry}
+\usepackage[margin=1in]{geometry}
 
 \moderncvstyle{classic} % casual (default), classic, banking, oldstyle, fancy
 \moderncvcolor{blue}    % black, blue (default), burgandy, green, grey, orange, purple, red
@@ -16,7 +16,7 @@
 % =============================================================================
 
 \name{Matt}{Dutson}
-\title{CS Graduate Student at UW-Madison}
+\title{CS Graduate Student at UW--Madison}
 \phone{(608) 440-4434}
 \email{dutson@wisc.edu}
 \homepage{mattdutson.net}
@@ -32,12 +32,15 @@
 
 \section{Education}
 
-\cventry{2018--Present}{MS/PhD in Computer Science}{University of Wisconsin-Madison}{Madison WI}{}{
-    Interests: Computer vision, computer graphics, machine learning
+\cventry{2020--Present}{PhD in Computer Science}{University of Wisconsin--Madison}{Madison WI}{}{
+    Interests: Computer vision, computer graphics, machine learning\newline
+    Advisor: Mohit Gupta
 }
 
+\cventry{2018--2020}{MS in Computer Science}{University of Wisconsin---Madison}{Madison WI}{}{}
+
 \cventry{2013--2018}{Honors BS in Physics}{University of Utah}{Salt Lake City UT}{\textit{magnum cum laude}}{
-    Minors: Computer science, mathematics \newline
+    Minors: Computer science, mathematics\newline
     Thesis: Reconstruction of Cosmic Ray Geometry Using Cherenkov Backscattering
 }
 
@@ -46,13 +49,49 @@
 \section{Publications}
 
 \cvitem{2020}{
-    \textbf{Fibrillar Collagen Quantification With Curvelet Transform Based Computational Methods} \newline
-    \textit{Frontiers in Bioengineering and Biotechnology} \newline
+    \textbf{Fibrillar Collagen Quantification With Curvelet Transform Based Computational Methods}\newline
+    \textit{Frontiers in Bioengineering and Biotechnology}\newline
     Y.\ Liu, A.\ Keikhosravi, C.\ Pehlke, J.\ Bredfeldt, \textbf{M.\ Dutson}, H.\ Liu, G.\ Mehta, R.\ Claus, A.\ Patel, M.\ Conklin, D.\ Inman, P.\ Provenzano, E.\ Sifakis, J.\ Patel, and K.\ Eliceiri
 }
 
 % =============================================================================
 
+\section{Research Experience}
+
+\cventry{2020--Present}{Research Assistant}{UW--Madison}{}{Advised by Mohit Gupta}{
+    \begin{itemize}
+        \item Creating image and video processing algorithms for single-photon cameras (SPADs).
+        \item Exploring theory and applications of spiking neural networks.
+    \end{itemize}
+}
+
+\cventry{2018--2019}{Research Assistant}{UW--Madison}{}{Advised by Jignesh Patel and Kevin Eliceiri}{
+    \begin{itemize}
+        \item Participated in the initial design and development of Hustle, a scalable replacement for SQLite written in Rust.
+        \item Built a Java application for generating synthetic images of biological fiber networks.
+    \end{itemize}
+}
+
+\cventry{2016--2018}{Research Assistant}{University of Utah}{}{Advised by Douglas Bergman}{
+    \begin{itemize}
+        \item Wrote C++ simulations of cosmic ray propagation and detection to test novel detection techniques.
+        \item Operated the Telescope Array observatory in Delta UT.
+    \end{itemize}
+}
+
+% =============================================================================
+
+\section{Selected Coursework}
+
+\cvitem{Computer Science}{Computer vision, computer graphics, machine learning, high performance computing, computer architecture, data visualization, nonlinear optimization, algorithms}
+
+\cvitem{Mathematics}{Real analysis, statistics, partial differential equations, ordinary differential equations, linear algebra, calculus}
+
+\cvitem{Physics}{Particle physics, quantum mechanics, special relativity, thermodynamics, classical physics}
+
+% =============================================================================
+
+\clearpage % To prevent page-spanning section
 \section{Technical Skills}
 
 \cvitem{Languages}{\textbf{C++}, \textbf{Java}, \textbf{Python}, \textbf{Rust}, C, C\#, JavaScript, Perl}
@@ -64,16 +103,6 @@
 \cvitem{High Performance}{CUDA, MPI, OpenMP}
 
 \cvitem{Other}{\textbf{Linux}, \textbf{UNIX}, Git, LaTeX}
-
-% =============================================================================
-
-\section{Selected Coursework}
-
-\cvitem{Computer Science}{Computer vision, computer graphics, machine learning, high performance computing, computer architecture, data visualization, nonlinear optimization, algorithms}
-
-\cvitem{Mathematics}{Real analysis, statistics, partial differential equations, ordinary differential equations, linear algebra, calculus}
-
-\cvitem{Physics}{Particle physics, quantum mechanics, special relativity, thermodynamics, classical physics}
 
 % =============================================================================
 
@@ -101,34 +130,9 @@
 
 % =============================================================================
 
-\section{Research Experience}
-
-\cventry{2020--Present}{Research Assistant}{UW-Madison}{}{Advised by Mohit Gupta}{
-    \begin{itemize}
-        \item Creating image and video processing algorithms for single-photon visual sensors.
-        \item Exploring theory and applications of spiking neural networks.
-    \end{itemize}
-}
-
-\cventry{2018--2019}{Research Assistant}{UW-Madison}{}{Advised by Jignesh Patel and Kevin Eliceiri}{
-    \begin{itemize}
-        \item Participated in the initial design and development of Hustle, a scalable replacement for SQLite written in Rust.
-        \item Built a Java application for generating synthetic images of biological fiber networks.
-    \end{itemize}
-}
-
-\cventry{2016--2018}{Research Assistant}{University of Utah}{}{Advised by Douglas Bergman}{
-    \begin{itemize}
-        \item Wrote C++ simulations of cosmic ray propagation and detection in order to test new detection techniques.
-        \item Operated the Telescope Array observatory in Delta UT.
-    \end{itemize}
-}
-
-% =============================================================================
-
 \section{Teaching Experience}
 
-\cventry{Fall 2019}{Teaching Assistant}{UW-Madison}{}{CS 559 Computer Graphics}{
+\cventry{Fall 2019}{Teaching Assistant}{UW--Madison}{}{CS 559 Computer Graphics}{
     Instructor: Florian Heimerl
 }
 
