--- a/assets/cv.tex
+++ b/assets/cv.tex
@@ -37,7 +37,7 @@
     Advisor: Mohit Gupta
 }
 
-\cventry{2018--2020}{MS in Computer Science}{University of Wisconsin---Madison}{Madison WI}{}{}
+\cventry{2018--2020}{MS in Computer Science}{University of Wisconsin--Madison}{Madison WI}{}{}
 
 \cventry{2013--2018}{Honors BS in Physics}{University of Utah}{Salt Lake City UT}{\textit{magnum cum laude}}{
     Minors: Computer science, mathematics\newline
