--- a/assets/cv.tex
+++ b/assets/cv.tex
@@ -32,12 +32,10 @@
 
 \section{Education}
 
-\cventry{2020--Present}{PhD in Computer Science}{University of Wisconsin--Madison}{Madison WI}{}{
+\cventry{2018--Present}{MS/PhD in Computer Science}{University of Wisconsin--Madison}{Madison WI}{}{
     Interests: Computer vision, computer graphics, machine learning\newline
     Advisor: Mohit Gupta
 }
-
-\cventry{2018--2020}{MS in Computer Science}{University of Wisconsin--Madison}{Madison WI}{}{}
 
 \cventry{2013--2018}{Honors BS in Physics}{University of Utah}{Salt Lake City UT}{\textit{magnum cum laude}}{
     Minors: Computer science, mathematics\newline
